Fixed somethings with mobile menu let me know what you think. Added the hover animation for the top menu bar. I still have to make an active one so it shows what page is currently active. fixed alignment for about us on mobile. Removied testimonials from all pages.

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -103,7 +103,36 @@ $aos-distance: 10px;
     
 }
 
-@media (max-width: 768px) {
+
+.navbar_links 
+{
+    height: 100%;
+    position: relative;
+}
+
+.navbar_links:after
+{
+    content: '';
+    position: absolute;
+    border-radius: 20%;
+    width: 80%;
+    transform: scaleX(0);
+    height: 5px;
+    top: 90%;
+    left: 6px;
+    right: 0;
+    background-color: #0CB9FB;
+    transform-origin: center;
+    transition: transform 0.25s ease-out;
+}
+
+.navbar_links:hover:after
+{
+    transform: scaleX(0.3);
+    transform-origin: center;
+}
+
+@media (max-width: 425px) {
     .card {
         max-width: 20em;
     }
